# fabreq

./: CMakeLists.txt  README.md
include/fabreq/: fabreq.h
presentation/: data_element.h  main.cpp  process.h  sink_functor.h  source_functor.h  transform_functor.h
src/: buffer.h  buffer_proxy.h  clone.h  context.h  distribute.h  helper.h  join.h  merge.h  nonblocking_queue.h  pvalue.h  sink.h  source.h  thread_pool.h  transform.h  tuple_helper.h
tests/: clone.cpp  distribute.cpp  main.cpp  merge.cpp  source_sink.cpp  transform.cpp
